<resources>
    <string name="app_name">SmartClass</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1475958282464861</string>
    <string name="fb_login_protocol_scheme">fb1475958282464861</string>

    <!-- Actions -->
    <string name="action_total_progress">View total goal progress</string>
    <string name="action_create_a_goal">Create a goal</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_finish">Finish</string>
    <string name="action_create_a_quiz">Create a quiz</string>
    <string name="action_save_changes">Save Changes</string>
    <string name="action_delete_quiz">Delete Quiz</string>
    <string name="action_start_quiz">Start Quiz</string>
    <string name="action_stop_quiz">Stop Quiz</string>

    <!-- Goal Creation Strings -->
    <string name="create_a_goal_label">Create a Goal</string>
    <string name="status_label">Status: </string>
    <string name="title_label">Title</string>
    <string name="description_label">Description</string>
    <string name="goal_type_label">Goal Type</string>
    <string name="start_date_label">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="choose_date_button_label">Choose Date</string>
    <string name="weight_label">Weight</string>
    <string name="marks_label">Marks</string>

    <!-- Login Strings -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="saved_user_token">User Token</string>
    <string name="saved_user_id">User Id</string>
    <string name="saved_classroom_id">Classroom Id</string>
    <string name="saved_teacher_field">Teacher Field</string>
    <string name="are_you_teacher">Are you a teacher?</string>
    <string name="username_empty">Please enter a username.</string>
    <string name="password_empty">Please enter a password.</string>
    <string name="login_error">Sorry something went wrong. Please try again.</string>
    <string name="pref_name">Authentication items</string>

    <!-- Quiz Creation Strings -->
    <string name="create_a_quiz_label">Create a Quiz</string>
    <string name="question_label">Question</string>

    <!-- Quiz View Strings -->
    <string name="quiz_view_label">Quiz</string>
    <string name="submit_button">Submit</string>
    
    <!-- Goal Progress -->
    <string name="goal_progress">Goal Progress</string>

</resources>
