<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".course.CourseActivity">

    <item
        android:id="@+id/action_save_changes"
        android:orderInCategory="100"
        android:title="@string/action_save_changes"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/action_delete_quiz"
        android:orderInCategory="100"
        android:title="@string/action_delete_quiz"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/action_start_quiz"
        android:orderInCategory="100"
        android:title="@string/action_start_quiz"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/action_stop_quiz"
        android:orderInCategory="100"
        android:title="@string/action_stop_quiz"
        app:showAsAction="collapseActionView"/>

</menu>