<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="smartclass.com.smartclass.course.fragments.quizzes.quizCreation.QuizCreationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/action_bar"
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:visibility="gone"/>

    <!-- Title section -->

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/title_label"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/title_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:inputType="text"/>

    <!-- Description section -->

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/description_label"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:inputType="text"/>

    <!-- Quiz Questions Section -->

    <TextView
        android:id="@+id/question_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/question_label"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/question_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:inputType="text"/>

    <!-- Question Answers -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/answer1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Answer 1: "
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/answer1_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/answer2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Answer 2: "
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/answer2_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/answer3_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Answer 3: "
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/answer3_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/answer4_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Answer 4: "
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/answer4_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/answer5_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Answer 5: "
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/answer5_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/correct_answer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Correct Answer: "
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/correct_answer_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"/>

    </LinearLayout>

</LinearLayout>
